tests/machine/x/c/record_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/record_assign.c:26:3: error: conflicting types for ‘Counter’; have ‘struct <anonymous>’
   26 | } Counter;
      |   ^~~~~~~
/workspace/mochi/tests/machine/x/c/record_assign.c:22:24: note: previous declaration of ‘Counter’ with type ‘Counter’
   22 | typedef struct Counter Counter;
      |                        ^~~~~~~
/workspace/mochi/tests/machine/x/c/record_assign.c: In function ‘inc’:
/workspace/mochi/tests/machine/x/c/record_assign.c:28:24: error: ‘c’ is a pointer; did you mean to use ‘->’?
   28 | int inc(Counter *c) { c.n = (c.n + 1); }
      |                        ^
      |                        ->
/workspace/mochi/tests/machine/x/c/record_assign.c:28:31: error: ‘c’ is a pointer; did you mean to use ‘->’?
   28 | int inc(Counter *c) { c.n = (c.n + 1); }
      |                               ^
      |                               ->

   1: #include <stdio.h>
